<resources>
    <string name="app_name">My Application</string>
    <string name="please_enter_username">Please enter instagram username</string>
    <string name="username_hint">Username</string>
    <string name="find_button_text">Find</string>
    <string name="instagram_avatar_description">Instagram avatar</string>
    <string name="fake">FAKE</string>
    <string name="real">REAL</string>
    <string name="username_placeholder">username placeholder</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="app_description">Suspected\nAccount Analysis</string>
    <string name="app_full_description">Analyze the account and reveal the truth!</string>
    <string name="insta_statystics">Instagram may have 95 millions bot accounts.\nTry to find real</string>
    <string name="first_fake_metric">Follower and Followers\nAnalysis</string>
    <string name="second_fake_metric">Reliabilty rate\n93%</string>
</resources>
